Edited ports for test

--- a/test1-git/Dockerfile
+++ b/test1-git/Dockerfile
@@ -1,5 +1,5 @@
 FROM ubuntu
 MAINTAINER Sebastien Nenon <sebnenon@gmail.com>
 RUN apt-get update && apt-get install -y nginx
-EXPOSE 80 443
+EXPOSE 80 443 8080
 CMD ["nginx"]
